--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="COFFEE WARS is a feature film about a vegan coffee barista."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
   
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Coffee Wars</title>
+    <title>CoffeeWarsNFT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
